--- a/.github/workflow/ci.yaml
+++ b/.github/workflow/ci.yaml
@@ -1,4 +1,4 @@
-name: Python CI/CD Pipeline
+name: Python CI Pipeline
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build-test-lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,16 +17,21 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
 
-      - name: Run tests
+      - name: Run pylint
+        run: |
+          pylint app/main.py --disable=C0114,C0116
+
+      - name: Run pytest
         run: |
           pytest
+
 
   deploy:
     needs: build-and-test
